--- a/team/index.html
+++ b/team/index.html
@@ -11,10 +11,10 @@
     <title>HackVerse | January 25-26, 2020</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="/img/LOGO.png">
+    <link rel="icon" href="img/LOGO.png">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -62,10 +62,10 @@
                                     </li>
                                 </ul>
     
-                                <img id="logo-pc" src="/img/emblem.png" style="max-width: 7%;cursor: pointer;" >     
+                                <img id="logo-pc" src="img/emblem.png" style="max-width: 7%;cursor: pointer;" >     
     
                                 <div id="logo-mob">
-                                    <img  src="/img/emblem.png" style="max-width: 25%;display:block;margin:auto;padding-top: 55%;cursor: pointer;">     
+                                    <img  src="img/emblem.png" style="max-width: 25%;display:block;margin:auto;padding-top: 55%;cursor: pointer;">     
                                 </div>    
                             </div>
                         </div>
@@ -135,7 +135,7 @@
                     <div class="col-12 col-sm-6 col-lg-3">
                         <div class="single-footer-widget mb-60 wow fadeInUp" data-wow-delay="300ms">
                             <!-- Footer Logo -->
-                            <a href="#" class="footer-logo"><img style="height: auto;width: auto;max-height: 72px;max-width: 200px;" src="/img/Text-Logo.png" alt="HackVerse"></a>
+                            <a href="#" class="footer-logo"><img style="height: auto;width: auto;max-height: 72px;max-width: 200px;" src="img/Text-Logo.png" alt="HackVerse"></a>
                             <p>Hack it till you crack it!</p>
 
                             <!-- Social Info -->
@@ -173,22 +173,22 @@
                             <div class="footer-gallery">
                                 <div class="row">
                                     <div class="col-4">
-                                        <a href="/img/nitk/01.jpg" class="single-gallery-item"><img src="/img/nitk/01.jpg" alt="NITK, Surathkal"></a>
+                                        <a href="img/nitk/01.jpg" class="single-gallery-item"><img src="/img/nitk/01.jpg" alt="NITK, Surathkal"></a>
                                     </div>
                                     <div class="col-4">
-                                        <a href="/img/nitk/02.jpg" class="single-gallery-item"><img src="/img/nitk/02.jpg" alt="NITK, Surathkal"></a>
+                                        <a href="img/nitk/02.jpg" class="single-gallery-item"><img src="/img/nitk/02.jpg" alt="NITK, Surathkal"></a>
                                     </div>
                                     <div class="col-4">
-                                        <a href="/img/nitk/03.jpg" class="single-gallery-item"><img src="/img/nitk/03.jpg" alt="NITK, Surathkal"></a>
+                                        <a href="img/nitk/03.jpg" class="single-gallery-item"><img src="/img/nitk/03.jpg" alt="NITK, Surathkal"></a>
                                     </div>
                                     <div class="col-4">
-                                        <a href="/img/nitk/04.jpg" class="single-gallery-item"><img src="/img/nitk/04.jpg" alt="NITK, Surathkal"></a>
+                                        <a href="img/nitk/04.jpg" class="single-gallery-item"><img src="/img/nitk/04.jpg" alt="NITK, Surathkal"></a>
                                     </div>
                                     <div class="col-4">
-                                        <a href="/img/nitk/05.jpg" class="single-gallery-item"><img src="/img/nitk/05.jpg" alt="NITK, Surathkal"></a>
+                                        <a href="img/nitk/05.jpg" class="single-gallery-item"><img src="/img/nitk/05.jpg" alt="NITK, Surathkal"></a>
                                     </div>
                                     <div class="col-4">
-                                        <a href="/img/nitk/06.jpg" class="single-gallery-item"><img src="/img/nitk/06.jpg" alt="NITK, Surathkal"></a>
+                                        <a href="img/nitk/06.jpg" class="single-gallery-item"><img src="/img/nitk/06.jpg" alt="NITK, Surathkal"></a>
                                     </div>
                                 </div>
                             </div>
@@ -214,7 +214,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                     <div class="col-12 col-md-6">
                         <div class="footer-menu">
                             <ul class="nav">
-                                <li><a target="_blank" rel="noopener noreferrer" href="/docs/HackVerse Terms&Conditions.pdf"><i class="zmdi zmdi-circle"></i>Terms & Conditions</a></li>
+                                <li><a target="_blank" rel="noopener noreferrer" href="docs/HackVerse Terms&Conditions.pdf"><i class="zmdi zmdi-circle"></i>Terms & Conditions</a></li>
                                 <li><a target="_blank" rel="noopener noreferrer" href="https://devfolio.co/code-of-conduct"><i class="zmdi zmdi-circle"></i> Code of Conduct</a></li>
                                 <!-- <li><a href="#"><i class="zmdi zmdi-circle"></i> Privacy Policy</a></li> -->
                             </ul>
