--- a/team/index.html
+++ b/team/index.html
@@ -11,7 +11,7 @@
     <title>HackVerse | January 25-26, 2020</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/LOGO.png">
+    <link rel="icon" href="../img/LOGO.png">
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="../style.css">
@@ -33,7 +33,7 @@
                     <nav class="classy-navbar justify-content-between" id="conferNav">
     
                         <!-- Logo -->
-                        <a class="nav-brand" href="../"><img style="height: auto;width: auto;max-height: 72px;max-width: 250px;" src="/img/Text-Logo.png"></a>
+                        <a class="nav-brand" href="../"><img style="height: auto;width: auto;max-height: 72px;max-width: 250px;" src="../img/Text-Logo.png"></a>
     
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
