change team url

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                                 Surathkal</a></li>
                                         <li><a target="_blank" rel="noopener noreferrer" href="/blog/">HackVerse
                                                 Blog</a></li>
-                                        <li><a target="_blank" rel="noopener noreferrer" href="team">Team</a></li>
+                                        <li><a target="_blank" rel="noopener noreferrer" href="/team">Team</a></li>
                                         <!-- <li><a href="schedule.html">- Schedule</a></li>
                                         <li><a href="./faq/">- Tickets</a></li>
                                         <li><a href="blog.html">- Blog</a></li>
@@ -1705,7 +1705,7 @@
                                 <script>
                                     document.write(new Date().getFullYear());
                                 </script> All rights reserved | Made with <i class="fa fa-heart-o"
-                                    aria-hidden="true"></i> by <a href="https://hackverse.nitk.ac.in/team"
+                                    aria-hidden="true"></i> by <a href="/team"
                                     target="_blank">HackVerse Team</a> &amp; <a href="https://colorlib.com"
                                     target="_blank">Colorlib</a>
                             </p>
