--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <meta name="twitter:title" content="HackVerse - One of India's Biggest Student Run Hackathon">
     <meta name="twitter:description"
         content="HackVerse - 24 Hour Nation-Wide Hackathon at NITK, Surathkal as a part of the Diamond Jubilee Celebrations">
-    <meta name="twitter:image:src" content="/img/LOGO.png">
+    <meta name="twitter:image:src" content="./img/LOGO.png">
 
     <!-- Title -->
     <title>HackVerse | January 25-26, 2020</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="/img/LOGO.png">
+    <link rel="icon" href="./img/LOGO.png">
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -70,9 +70,9 @@
     </script>
     <!-- ***bootstrap and jquery***-->
     <!-- jQuery 2.2.4 -->
-    <script src="/js/jquery.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
     <!-- Bootstrap -->
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
 </head>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
