--- a/index.html
+++ b/index.html
@@ -1716,7 +1716,7 @@
                         <div class="footer-menu">
                             <ul class="nav">
                                 <li><a target="_blank" rel="noopener noreferrer"
-                                        href="/docs/HackVerse Terms&Conditions.pdf"><i
+                                        href="./docs/HackVerse Terms&Conditions.pdf"><i
                                             class="zmdi zmdi-circle"></i>Terms & Conditions</a></li>
                                 <li><a target="_blank" rel="noopener noreferrer"
                                         href="https://devfolio.co/code-of-conduct"><i class="zmdi zmdi-circle"></i> Code
